# avm-asm

./: Cargo.toml  README.md
src/: avm.lalrpop  codegen.rs  compiler.rs  fm.rs  instruction.rs  lib.rs  main.rs  opcodes.rs  utils.rs
src/parser/: mod.rs  types.rs
test_programs/: big.avm  includes.avm  includes_child.avm  indirect.avm  labels.avm  macro.avm  minimal.avm
