[package]
name = "avm-asm"
author = "Maddiaa"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
phf = { version = "0.10", features = ["macros"] }
clap = { version = "3.1.18", features = ["derive"] }
